objects/BRF_Mapping__mdt.object
<CustomObject>
    <fields>
        <fullName>BDD_Custom_Name__c</fullName>
        <label>BDD Custom Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BRF_Custom_Mapping_Name__c</fullName>
        <label>BRF Custom Mapping Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Grouper_Name__c</fullName>
        <label>Grouper Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>BRF Mapping</label>
    <pluralLabel>BRF Mapping</pluralLabel>
</CustomObject>